# scrapy-examples

./: README.md  pyproject.toml
laravel/: cloudways.json  laravel_new.json  scrapy.cfg
laravel/laravel/: items.py  middlewares.py  pipelines.py  settings.py
laravel/laravel/spiders/: cloudways.py  laravel_news.py
